--- a/views/about.tmpl
+++ b/views/about.tmpl
@@ -37,6 +37,7 @@
         <h2>Where are URY?</h2>
         <p>URY's studios lie at the very heart of the Campus in our own building at Vanbrugh College.</p>
         <p>But URY's real presence is felt outside of the studio, around the campus at major University and Student Union events, whether we're covering live music, recruiting new Freshers or reporting on major news events.</p>
+        <p><a href="{{url "/contact/#map"}}">Find us on a map!</a></p>
       </div>
       <div class="col-md-6 col-lg-3">
         <h2>Our Teams</h2>
