--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -79,7 +79,7 @@
         <dt>Join Our Slack Team</dt>
         <dd>Use <a href="//slack.com/is" title="Find out more about Slack!" target="_blank">Slack</a>; it's like Facebook Messenger but for URY team communication. Slack has the advantage of having a “channel” for each team, so you can join any channel and see what is happening. Our Slack team: <a href="//ury.slack.com" title="Join Our Slack Team" target="_blank">ury.slack.com</a> sign up using your university email address.</dd>
       </dl>
-      <p>You can also come and <a href="{{url "/contact/"}}#map" title="Contact us page">visit our station</a> in Vanbrugh College, where there'll almost always be someone there to talk to you and get you set up.</p>
+      <p>You can also come and <a href="{{url "/contact#map"}}" title="Contact us page">visit our station</a> in Vanbrugh College, where there'll almost always be someone there to talk to you and get you set up.</p>
   </div>
 </div>
 <div class="container-fluid container-padded bg-secondary" id="signUp">
