--- a/views/contact.tmpl
+++ b/views/contact.tmpl
@@ -147,6 +147,11 @@
 
 {{define "footer-scripts"}}
 <!-- Responsive map script -->
+<script>
+var placeName = "{{.PageContext.LongName}}";
+var Lat = "{{.PageContext.Gmaps.Lat}}";
+var Lng = "{{.PageContext.Gmaps.Lng}}";
+</script>
 <script src='{{url "/js/responsivemap.js"}}'></script>
 <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key={{.PageContext.Gmaps.APIKey}}"></script>
 {{end}}
