Removed quotes from around a number bc js

--- a/views/contact.tmpl
+++ b/views/contact.tmpl
@@ -149,8 +149,8 @@
 <!-- Responsive map script -->
 <script>
 var placeName = "{{.PageContext.LongName}}";
-var Lat = "{{.PageContext.Gmaps.Lat}}";
-var Lng = "{{.PageContext.Gmaps.Lng}}";
+var Lat = {{.PageContext.Gmaps.Lat}};
+var Lng = {{.PageContext.Gmaps.Lng}};
 </script>
 <script src='{{url "/js/responsivemap.js"}}'></script>
 <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key={{.PageContext.Gmaps.APIKey}}"></script>
