--- a/sass/main.scss
+++ b/sass/main.scss
@@ -276,17 +276,17 @@ footer {
 }
 
 
-/* Styling for responsive map */
-#map_container {
+// Styling for responsive map
+.map-container {
   width: 100%;
   margin: 0 auto;
-  margin-top: 10px
+  margin-top: 10px;
 }
 
-#map {
+.res-map {
   height: 400px;
   overflow: hidden;
   position: relative;
   padding-bottom: 22.25%;
-  padding-top: 30px
+  padding-top: 30px;
 }
