--- a/views/contact.tmpl
+++ b/views/contact.tmpl
@@ -136,8 +136,8 @@
       <div class="col-md-7">
         <h2>Where to find us</h2>
         <a name="map"></a>
-        <div id="map_container">
-          <div id="map"></div>
+        <div class="map-container">
+          <div id="map" class="res-map"></div>
         </div>
       </div>
     </div>
