Add URY colors as vars

--- a/sass/base/_utils.scss
+++ b/sass/base/_utils.scss
@@ -1,3 +1,7 @@
+// Method to tint colors
+@function tint($color, $percent){
+  @return mix(white, $color, 100% - $percent);
+}
 
 // scss-lint:disable This is specific to UL's only
 ul {
