--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -1,6 +1,19 @@
-$primary-color: rgba(0, 51, 103, 1);
-$secondary-color: rgba(1, 26, 50, 1);
-$third-color: rgba(2, 33, 63, 1);
+// Add percentage of white to a color
+@import "utils";
+
+$ury-blue-color: #002d5a;
+
+$computing-grey: #2E3540;
+
+$speech-green: #2A722B;
+
+$news-maroon: #5A162E;
+
+$music-purple: #562179;
+
+$primary-color: $ury-blue-color;
+$secondary-color: tint($ury-blue-color, 80%);
+$third-color: tint($ury-blue-color, 60%);
 $off-white-color: #e1e1e1;
 
 $blue: #0073e6;
