--- a/views/timeslot.tmpl
+++ b/views/timeslot.tmpl
@@ -58,7 +58,7 @@
         <h3>Tags</h3>
         {{range .Timeslot.Tags}}
         <a href="/search?term={{.}}" alt="Search for '{{.}}'.">
-          <span class="tag badge badge-default">{{.}}</span>
+          <span class="badge badge-secondary">{{.}}</span>
         </a>
         {{end}}
 	    </div>
