--- a/views/show.tmpl
+++ b/views/show.tmpl
@@ -22,7 +22,7 @@
 
 </div>
 <div class="container-fluid bg-off-white">
-	<div class="container pt-3">
+	<div class="container p-3">
 	  <div class="row">
 	    <div class="col-12 col-sm-5 col-lg-3">
 	     	<img class="img-fluid show-img" src="
