--- a/views/timeslot.tmpl
+++ b/views/timeslot.tmpl
@@ -18,11 +18,11 @@
 
 {{define "content"}}
 {{with .PageData}}
-<div class="container-fluid header-large current-next">
-  <div class="container container-padded ">
+<div class="container-fluid current-next">
+  <div class="container">
   {{if .MixcloudAvailable}}
     <div class="row justify-content-center">
-      <div class="col-md-10 py-2 mixcloud">
+      <div class="col-11 col-md-10 py-2 mixcloud">
         <h2>URY on Tap: Listen Again</h2>
         <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?feed={{.Timeslot.MixcloudStatus}}&hide_cover=1&light=1" frameborder="0"></iframe>				
         <a href="#">Listen to more shows on URY On Demand</a>
@@ -66,9 +66,10 @@
 	</div>
 </div>
 {{if .Timeslot.Credits}}
-<div class="container-fluid">
-  <div class="container pt-3">
+<div class="container-fluid bg-primary">
+  <div class="container p-3">
     <h2>Credits</h2>
+    <hr>
     {{range .Timeslot.Credits}}
     <a href="/people/{{.User.MemberID}}/">{{.User.Fname}} {{.User.Sname}}</a> <br>
     {{end}}
@@ -77,7 +78,7 @@
 {{end}}
 {{if .Tracklist}}
 <div class="container-fluid">
-  <div class="container pt-3">
+  <div class="container p-3">
     <h2>Tracklist</h2>
     <table class="table">
       <thead>
