--- a/views/timeslot.tmpl
+++ b/views/timeslot.tmpl
@@ -65,19 +65,27 @@
 	  </div>
 	</div>
 </div>
-{{if .Timeslot.Credits}}
-<div class="container-fluid bg-primary">
-  <div class="container p-3">
-    <h2>Credits</h2>
-    <hr>
-    {{range .Timeslot.Credits}}
-    <a href="/people/{{.User.MemberID}}/">{{.User.Fname}} {{.User.Sname}}</a> <br>
-    {{end}}
-  </div>
+{{if .CreditsToUsers}}
+<div class="container-fluid bg-secondary">
+  <div class="container pt-3">
+		<h2>Credits</h2>
+		<hr>
+		<div class="row">
+			{{range $key, $value := .CreditsToUsers}}
+			<div class="col-sm-4 pb-3">
+				<h3>{{$key}}</h3>
+				{{range $value}}
+				<a href="/people/{{.MemberID}}/">{{.Fname}} {{.Sname}}</a> <br>
+				{{end}}
+			</div>
+			{{end}}
+		</div>
+	</div>
 </div>
 {{end}}
+
 {{if .Tracklist}}
-<div class="container-fluid">
+<div class="container-fluid bg-third">
   <div class="container p-3">
     <h2>Tracklist</h2>
     <table class="table">
