--- a/views/elements/current_and_next.tmpl
+++ b/views/elements/current_and_next.tmpl
@@ -2,17 +2,17 @@
 {{with .CurrentAndNext}}
 <div class="current-and-next row justify-content-center">
   {{if .Current}}
-  <div class="col-4 col-lg-2 p-0 current-and-next-img">
+  <div class="col-4 col-md-2 p-0 current-and-next-img">
     <img src="/images/show-current.png" alt="" />
     <a href="https://ury.org.uk/listen" class="btn btn-red listen-btn mobile-hide" title="Listen Live" onclick="window.open('http://ury.org.uk/live', 'radioplayer', 'height=665,width=380'); return false;">Listen Live</a>
   </div>
-  <div class="col-8 col-lg-5 p-2 pt-3 px-3 p-md-3 p-lg-4 current-and-next-now">
+  <div class="col-8 col-md-5 p-2 pt-3 px-3 p-md-3 p-lg-4 current-and-next-now">
     <h2>Now</h2>
     {{template "current_next" .Current}}
   </div>
   {{end}}
   {{if .Next}}
-  <div class="col col-lg-5 p-3 p-lg-4 current-and-next-next">
+  <div class="col col-md-5 p-3 p-lg-4 current-and-next-next">
     <h2>Next</h2>
     {{template "current_next" .Next}}
   </div>
