--- a/sass/elements/_currentAndNext.scss
+++ b/sass/elements/_currentAndNext.scss
@@ -4,12 +4,12 @@
   color: white;
 
   // Padding for mobile
-  padding: calc(5em + 60px) 0 5em 0;
+  padding: calc(5em + 60px) 0 5em;
 
   // Padding for desktop
   @include media-breakpoint-up(md) {
-    // Remove the height of the nav bar roughly 
-    padding: calc(8em + 60px) 0 8em 0;
+    // Remove the height of the nav bar roughly 60px
+    padding: calc(8em + 60px) 0 8em;
   }
 }
 
