--- a/views/index.tmpl
+++ b/views/index.tmpl
@@ -14,12 +14,7 @@
     <div class="container container-padded">
       <div class="row justify-content-center">
         <div class="pb-4 col-lg-3">
-          <h2>Send a Message</h2>
-          <hr>
-          <form id="sendMessage" action="">
-            <textarea class="form-control" rows="5" name="body">Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</textarea>
-            <button type="submit" class="btn btn-primary btn-block">Send</button>
-          </form>
+        {{template "message_box" .}}
         </div>
         <div class="col-lg-9">
           <h2>Get Involved</h2>
@@ -150,7 +145,9 @@
 <script>
 var youtubeAPIKey = {{.PageContext.Youtube.APIKey}};
 var youtubePlaylistID = "{{.PageContext.Youtube.PlaylistID}}";
+var myRadioAPIKey = {{.PageContext.MyRadioAPIKey}};
 </script>
+<script src="{{url "/js/message_box.js"}}"></script>
 <script src='{{url "js/index.js"}}'></script>
 <script src="https://apis.google.com/js/client.js?onload=onGoogleLoad"></script>
 {{end}}
