--- a/views/elements/message_box.tmpl
+++ b/views/elements/message_box.tmpl
@@ -3,9 +3,9 @@
 <h2>Send a Message</h2>
 <hr>
 <form id="studiomessage">
-  <textarea class="form-control" id="comments" name="comments" rows="5" placeholder="Why not send a message to the studio presenters? Have a bit of banter, share your opinions or simply request your favourite song?"></textarea>
-  <span class="help-block">You can also text the studio on 07851 101 313.</span>
-  <button id="messagesend"  class="btn btn-default btn-lg btn-block" type="submit" value="SEND MESSAGE">Send Message</button>
+  <textarea class="form-control" id="comments" name="comments" rows="4" placeholder="Why not send a message to the studio presenters? Have a bit of banter, share your opinions or simply request your favourite song?"></textarea>
+  <button id="messagesend"  class="btn btn-primary btn-block" type="submit" value="SEND MESSAGE">Send Message</button>
 </form>
+<p class="pt-1">You can also text on <a href="sms:+447851101313">07851 101 313</a></p>
 {{end}}
 {{end}}
