Move to a CDN and remove unneeded js library

--- a/views/partials/base.tmpl
+++ b/views/partials/base.tmpl
@@ -26,7 +26,7 @@
     <meta property="og:url" content="{{.PageContext.FullURL}}{{url "/"}}">
     {{end}}
 
-    <script src="{{url "/js/jquery-3.1.1.min.js"}}"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 
     <!-- bootstrap -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
@@ -53,8 +53,6 @@
 {{template "footer" .}}
 
 <script src="{{url "/js/main.js"}}"></script>
-<!-- TODO: Move to local copy of these -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
 {{block "footer-scripts" .}}{{end}}
 </body>
 </html>
