--- a/views/getinvolved.tmpl
+++ b/views/getinvolved.tmpl
@@ -86,7 +86,7 @@
   <div class="container container-padded">
     <h1>Sign up today!</h1>
     <hr>
-    <form name="getInvolvedForm" class="form-getinvolved">
+    <form name="getInvolvedForm" class="form-getinvolved" action="/signup/">
       <div class="row">
         <fieldset id="getinvolved-personal-details" class="col-md-6">
           <legend>I'm…</legend>
@@ -101,7 +101,7 @@
           <div class="form-group">
             <label for="text">York Email</label>
             <div class="input-group">
-              <input type="text" id="email" name="email" class="form-control" placeholder="abc123">
+              <input type="text" id="eduroam" name="eduroam" class="form-control" placeholder="abc123">
               <span class="input-group-addon">@york.ac.uk</span>
             </div>
           </div>
@@ -132,6 +132,8 @@
             <label for="interest-{{.Alias}}" title="{{html .Description}}">{{.Name}}</label>
             <br>
           {{end}}
+          <br>
+          <input type="submit" class="form-control">
         </fieldset>
       </div>
     </form>
