Fixed some broken links

--- a/views/signedup.tmpl
+++ b/views/signedup.tmpl
@@ -66,7 +66,7 @@
         <br>
         <img src="https://cdn-images-1.medium.com/max/1200/1*TiKyhAN2gx4PpbOsiBhYcw.png" class="img-fluid rounded" alt="Slack Logo">
         <p></p>
-        <p class="text-center">Find the URY slack channel at <a href="ury.slack.com">ury.slack.com</a> and join all the channels you're interested in.</p>
+        <p class="text-center">Find the URY slack channel at <a href="http://ury.slack.com">ury.slack.com</a> and join all the channels you're interested in.</p>
       </div>
 
       <div class="col-md-1"><br></div>
@@ -75,7 +75,7 @@
         <br>
         <h1 class="text-center">Come see us!</h1>
         <br>
-        <p class="text-center">We have a calendar of <a href="https://calendar.google.com/calendar/embed?src=5ada1ep7d13ojs4tioifqcl53o@group.calendar.google.com&ctz=Europe/London">all our meetings</a>, to which new members are always welcome, and you can drop by the station almost any time and there'll be someone to talk to.</p>
+        <p class="text-center">We have a calendar of <a href="https://goo.gl/5APK7Q">all our meetings</a>, to which new members are always welcome, and you can drop by the station almost any time and there'll be someone to talk to.</p>
         <br>
         <p class="text-center">All of our meetings are held in Vanbrugh Arms (V&nbsp;Bar), which is right next to the radio station</p>
         <br>
@@ -88,7 +88,7 @@
         <br>
         <img src="https://ury.org.uk/myradio/img/myradio-logo.svg" class="img-fluid rounded mx-auto d-block" alt="Slack Logo" style="margin-top: 30%; margin-bottom: 30%">
         <p></p>
-        <p class="text-center">Once you get your confirmation email, you'll be able to log in to <a href="ury.org.uk/myradio/">MyRadio</a>. This is where you'll be able to book training, request shows and do other magical things.</p>
+        <p class="text-center">Once you get your confirmation email, you'll be able to log in to <a href="https://ury.org.uk/myradio/">MyRadio</a>. This is where you'll be able to book training, request shows and do other magical things.</p>
       </div>
 
     </div>
